# thesis_nerf

./: README.md  main.py  run.py
nerf_ws/src/laplacian/: .gitignore  CMakeLists.txt  liblaplacian.cu  liblaplacian.hpp  liblaplacian_py.cu  main.cu
nerf_ws/src/laplacian/notebooks/: demo.npy  gradient.ipynb  network_2d.pt  test.ipynb  test_3d.ipynb
nerf_ws/src/laplacian/notebooks/.ipynb_checkpoints/: test-checkpoint.ipynb  test_3d-checkpoint.ipynb
nerf_ws/src/laplacian/python/: __init__.py  network.py
nerf_ws/src/robot_library_py/: CMakeLists.txt  package.xml
nerf_ws/src/robot_library_py/parse_urdf/: CMakeLists.txt  __init__.py
nerf_ws/src/robot_library_py/parse_urdf/_core/: cpp_library.cpp  parse_urdf.h
nerf_ws/src/robot_library_py/tests/: parse_urdf_test.py  sawyer.urdf
nerf_ws/src/zed_description/: CMakeLists.txt  package.xml
nerf_ws/src/zed_description/launch/: zed2i.launch.py
nerf_ws/src/zed_description/launch/include/: zed_camera.launch.py
nerf_ws/src/zed_description/urdf/: zed_descr.urdf.xacro  zed_macro.urdf.xacro
notebooks/: fit_mesh.ipynb  flow_mesh.ipynb  nerf_optical_flow.ipynb  point_cloud.ipynb  run_network.ipynb  test.ipynb  train_mesh.ipynb  train_mesh.py
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  train_mesh-checkpoint.ipynb
scripts/: get_zed_images.m  operational_velocity.py  point_cloud_utils.py  ros_utils.py  run_apriltag.py  run_raft_stereo.py  scale_nerf.m  teleop.py  zeromq_server.py
scripts/unity/: calib.txt  cameras.txt  images.txt
